# isotope_sdk

./: .gitignore  README.md
docs/: generate.sh  index.html
installation/: INSTALLATION.md  install.py  install.sh  install_from_github.py  install_from_github.sh
python_lib/isotope/: __init__.py  isotope.py  isotope_comms_lib.py  pyproject.toml
python_lib/isotope/examples/: example_adc_input.py  example_motor.py  example_power_output.py  example_pwm_output.py  example_pwm_output_servo.py  example_rgb.py  example_temp_input.py
python_lib/isotope/isotope/: __version__.py  isotope.py  isotope_comms_lib.py  isotope_exceptions.py  timetest.py
python_lib/isotope/isotope/port/: __init__.py  adc_input.py  isotope_port.py  motor.py  power_output.py  pwm_output.py  temp_input.py
python_lib/isotope/isotope/utils/: __init__.py  logging.py
python_lib/isotope/port/: __init__.py  adc_input.py  isotope_port.py  motor.py  power_output.py  pwm_output.py  temp_input.py
python_lib/isotope/tests/: test_adc_input.py  test_motor.py  test_power_output.py  test_pwm_output.py  test_temp_input.py
python_lib/isotope/utils/: logging.py
python_lib/unit2_controller/: example_config.yaml  pyproject.toml  unit2_controller.py
python_lib/unit2_controller/examples/: config.yaml  config_single_board.yaml  my_unit2.py
python_lib/unit2_controller/module/: pump.py  valve.py
python_lib/unit2_controller/unit2_controller/: __init__.py  example_config.yaml  unit2_controller.py
python_lib/unit2_controller/unit2_controller/module/: __init__.py  device.py  pump.py  valve.py
(+39 files in other folders)
